[package]
name = 'pallet-pocket-mints'
version = "4.0.0-dev"
description = "FRAME pallet that provides a crude minting functionality that verifies the existence and locati of a CID before minting it to an address. Coupled to the ipfs-core pallet"
authors = ['Dan Henton https://github.com/DanHenton']
homepage = "https://substrate.io/"
edition = '2018'
license = "Apache-2.0"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
frame-support = { default-features = false, version = "4.0.0-dev", path = "../../frame/support" }
frame-system = { default-features = false, version = "4.0.0-dev", path = "../../frame/system" }
frame-benchmarking = { default-features = false, version = "4.0.0-dev", path = "../../frame/benchmarking", optional = true }
log = { version = "0.4" }
sp-std = { default-features = false, version = "4.0.0-dev", path = "../../primitives/std" }
sp-core = { default-features = false, version = "4.0.0-dev", path = "../../primitives/core" }
sp-io = { default-features = false, version = "4.0.0-dev", path = "../../primitives/io" }
sp-runtime = { default-features = false, version = "4.0.0-dev", path = "../../primitives/runtime" }

pallet-ipfs-core = { default-features = false, version = "4.0.0-dev", path = "../ipfs-core" }

[features]
default = ['std']
std = [
    'codec/std',
    'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'sp-std/std',
    'pallet-ipfs-core/std',
]

runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
