[package]
name = 'pallet-rs-ipfs'
version = "1.0.0"
description = "FRAME pallet template for defining custom runtime logic."
authors = ['Dan Henton <https://github.com/danhenton>']
homepage = "https://substrate.io/"
edition = '2018'
license = "Unlicense"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.130" }
scale-info = { default-features = false, version = "1.0",  features = ["derive"] }
frame-support = { default-features = false, version = "4.0.0-dev", path = "../../frame/support" }
frame-system = { default-features = false, version = "4.0.0-dev", path = "../../frame/system" }
frame-benchmarking = { default-features = false, version = "4.0.0-dev", path = "../../frame/benchmarking", optional = true }
sp-core = { default-features = false, version = "4.0.0-dev", path = "../../primitives/core" }
sp-io = { default-features = false, version = "4.0.0-dev", path = "../../primitives/io" }
sp-std = { default-features = false, version = "4.0.0-dev", path = "../../primitives/std" }
sp-runtime = { default-features = false, version = "4.0.0-dev", path = "../../primitives/runtime" }
log = { default-features = false, version = "0.4" }

[features]
default = ['std']
std = [
	'codec/std',
	'scale-info/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
	'serde/std',
	'sp-io/std',
	'sp-std/std',
]

runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
